changed prod env

--- a/graphql-prisma/config/prod.env
+++ b/graphql-prisma/config/prod.env
@@ -1,3 +1,3 @@
-PRISMA_ENDPOINT=http://localhost:4466
+PRISMA_ENDPOINT=http://172.18.0.2:4466
 PRISMA_SECRET=afrt23b64irl89f
 JWT_SECRET=thisisasecret
