--- a/graphql-prisma/prisma/docker-compose.yml
+++ b/graphql-prisma/prisma/docker-compose.yml
@@ -14,7 +14,7 @@ services:
           default:
             connector: postgres
             database: prisma
-            host: host.docker.internal
+            host: 172.18.0.2
             port: 5432
             user: postgres
             password: postgres
