--- a/graphql-prisma/prisma/docker-compose.yml
+++ b/graphql-prisma/prisma/docker-compose.yml
@@ -13,8 +13,8 @@ services:
         databases:
           default:
             connector: postgres
-            database: prisma
-            host: host.docker.internal
+            database: postgres
+            host: database-1.clvczwzlfjhj.ap-south-1.rds.amazonaws.com
             port: 5432
             user: postgres
             password: postgres
