local test setup

--- a/graphql-prisma/config/dev.env
+++ b/graphql-prisma/config/dev.env
@@ -1,3 +1,3 @@
-PRISMA_ENDPOINT=http://ec2-65-1-2-152.ap-south-1.compute.amazonaws.com:4466
+PRISMA_ENDPOINT=http://localhost:4466
 PRISMA_SECRET=afrt23b64irl89f
 JWT_SECRET=thisisasecret
