--- a/graphql-prisma/package.json
+++ b/graphql-prisma/package.json
@@ -7,24 +7,33 @@
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
     "get-schema": "graphql get-schema -p prisma --dotenv config/dev.env"
+  },
+  "jest": {
+    "globalSetup": "./tests/jest/globalSetup.js",
+    "globalTeardown": "./tests/jest/globalTeardown.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "apollo-boost": "^0.1.14",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
+    "cross-fetch": "^2.2.2",
     "env-cmd": "^10.1.0",
+    "graphql": "^14.0.2",
     "graphql-cli": "^2.16.4",
     "graphql-yoga": "^1.14.10",
     "jsonwebtoken": "^8.5.1",
     "prisma-binding": "^2.1.1"
   },
   "devDependencies": {
+    "jest": "^23.5.0",
     "nodemon": "^1.17.5"
   }
 }
